# ameba-rtos

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  README_CN.md  ameba.bat  ameba.py  ameba.sh  env.bat  env.sh  matter_setup.sh
amebadplus_gcc_project/: AmebaDplus_Release_Note.txt  CMakeLists.txt  Kconfig  Kconfig.bt  Makefile  amebaDplus_layout.ld  ameba_layout.ld  build.py  flash.py  manifest.json  manifest.json5  menuconfig.py  monitor.py  postbuild.cmake
amebadplus_gcc_project/menuconfig/: .config  .config_km0  .config_km4  ameba_guiconfig.py  config.in  genconfig.py  setconfig  setconfig.py  splitconfig.py
amebadplus_gcc_project/menuconfig/confs_daily_build/: audio_passthrough.conf  bt1.conf  bt2.conf  bt_en.conf  sdio_device.conf  usb.conf  wifi_all.conf  wps.conf
amebadplus_gcc_project/menuconfig/scripts/: ConfigGen  Menuconfig  tkgen.c  tkparse.h
amebadplus_gcc_project/project_km0/: CMakeLists.txt  Kconfig  Makefile  build
amebadplus_gcc_project/project_km0/asdk/: CMakeLists.txt  Kconfig  Makefile  Makefile.include.bt.gen  Makefile.include.gen  Makefile.lib  bluetooth_include.cmake  includeflags.cmake  libs.cmake
amebadplus_gcc_project/project_km0/inc/: FreeRTOSConfig.h  build_info.h  main.h  platform_autoconf.h
amebadplus_gcc_project/project_km0/src/: CMakeLists.txt  main.c
amebadplus_gcc_project/project_km4/: CMakeLists.txt  Kconfig  Kconfig.tz  Makefile
amebadplus_gcc_project/project_km4/asdk/: CMakeLists.txt  Kconfig  Makefile  Makefile.include.bt.gen  Makefile.include.gen  Makefile.lib  bluetooth_include.cmake  includeflags.cmake  libs.cmake
amebadplus_gcc_project/project_km4/inc/: FreeRTOSConfig.h  build_info.h  main.h  platform_autoconf.h
amebadplus_gcc_project/project_km4/src/: CMakeLists.txt  Makefile  main.c
amebadplus_gcc_project/project_km4/src_tfm/: CMakeLists.txt  Makefile  ameba_freertos_wrapper.c  ameba_tfm_test_cmd.c
amebadplus_gcc_project/utils/confs_daily_build/: audio_passthrough.conf  bt1.conf  bt2.conf  bt_en.conf  mp_shrink.conf  psram_tp.conf  sdio_bridge.conf  sdio_device.conf  sdio_fullmac_dev.conf  spi_bridge.conf  spi_fullmac_dev.conf  spi_wpaoh.conf  usb.conf  wifi_all.conf  wps.conf
amebadplus_gcc_project/utils/jlink_script/: AP0_SWDPWD_User.JLinkScript  AP1_KM0.JLinkScript  Ozone_KM0_debug.JLinkScript  Ozone_KM4_debug.JLinkScript  amebadplus_ips_internal.svd  cm0_JLinkGDBServer.sh  cm0_jlink.bat  cm0_jlink.sh  cm0_jlinkGDBSever.bat  cm4_jlink.bat  cm4_jlink.sh  cm4_jlinkGDBSever.bat  cm4_jlinkGDBSever.sh  gdb.py  openocd.cfg  openocd.json  swdpwd_User.bat
amebalite_gcc_project/: CMakeLists.txt  Kconfig  Kconfig.bt  Makefile  ameba_layout.ld  amebalite_layout.ld  build.py  default.conf  flash.py  manifest.json  manifest.json5  menuconfig.py  monitor.py  postbuild.cmake
amebalite_gcc_project/menuconfig/: .config  .config_km4  .config_kr4  Configure.help  Makefile  config.in  guiconfig.py  setconfig.py  splitconfig.py
amebalite_gcc_project/menuconfig/confs_daily_build/: audio_mixer_km4_ap.conf  audio_mixer_kr4_ap.conf  audio_passthrough_km4_ap.conf  audio_passthrough_kr4_ap.conf  bt1.conf  bt2.conf  bt_only.conf  dsp.conf  ipc.conf  kr4_singlecore.conf  lite_cross.conf  mp_expand.conf  mp_shrink.conf  trustzone.conf  wifi_all.conf
amebalite_gcc_project/menuconfig/scripts/: ConfigGen  Menuconfig  tkcond.c
amebalite_gcc_project/project_km4/: CMakeLists.txt  Kconfig  Makefile
amebalite_gcc_project/project_km4/asdk/: CMakeLists.txt  Kconfig  Makefile  Makefile.include.bt.gen  Makefile.include.gen  Makefile.lib  bluetooth_include.cmake  includeflags.cmake  libs.cmake
amebalite_gcc_project/project_km4/inc/: FreeRTOSConfig.h  build_info.h  main.h  platform_autoconf.h
amebalite_gcc_project/project_km4/src/: CMakeLists.txt  Makefile  main.c
amebalite_gcc_project/project_kr4/: CMakeLists.txt  Kconfig  Makefile
amebalite_gcc_project/project_kr4/inc/: FreeRTOSConfig.h  build_info.h  main.h  platform_autoconf.h
amebalite_gcc_project/project_kr4/src/: CMakeLists.txt  main.c
amebalite_gcc_project/project_kr4/vsdk/: CMakeLists.txt  Kconfig  Makefile  Makefile.include.bt.gen  Makefile.include.gen  Makefile.lib  bluetooth_include.cmake  includeflags.cmake  libs.cmake
amebalite_gcc_project/utils/confs_daily_build/: audio_mixer_km4_ap.conf  audio_mixer_kr4_ap.conf  audio_passthrough_km4_ap.conf  audio_passthrough_kr4_ap.conf  bt1.conf  bt2.conf  bt_only.conf  dsp.conf  ipc.conf  kr4_singlecore.conf  lite_cross.conf  mp_expand.conf  psram_tp.conf  trustzone.conf  wifi_all.conf
amebalite_gcc_project/utils/jlink_script/: KM4_SEL.JLinkScript  KR4_DMI.JLinkScript  Ozone_KM4_debug.JLinkScript  amebaLite_ips_internal.svd  cm4_jlink.bat  gdb.py  km4_JLinkGDBServer.sh  km4_jlink.sh  km4_jlinkGDBSever_combination.bat  km4_jlink_combination.bat  kr4_JLinkGDBServer_combination.bat  kr4_jlink.bat  kr4_jlink.sh  kr4_jlinkGDBSever.sh  kr4_jlink_combination.bat  openocd.json
amebasmart_gcc_project/: AmebaSmart_Release_Note.txt  CMakeLists.txt  Kconfig  Kconfig.bt  Kconfig.soc  Makefile  ameba_layout.ld  amebasmart_layout.ld  build.py  default.conf  flash.py  manifest.json  manifest.json5  menuconfig.py  monitor.py  platform_project_config.cmake  postbuild.cmake
amebasmart_gcc_project/menuconfig/: .config  .config_ap  .config_ca32  .config_hp  .config_km0  .config_km4  .config_lp  config.in  manager.py  mkconfig  setconfig.py  splitconfig.py
amebasmart_gcc_project/menuconfig/confs_daily_build/: audio_mixer_ca32_ap_km4_np.conf  audio_mixer_km4_single_core.conf  audio_passthrough_ca32_ap_km4_np.conf  bt1.conf  bt2.conf  (+13 more)
amebasmart_gcc_project/project_ap/: CMakeLists.txt  Kconfig  Makefile  mcu_project_config.cmake
amebasmart_gcc_project/project_hp/: CMakeLists.txt  Kconfig  Makefile  mcu_project_config.cmake
amebasmart_gcc_project/project_lp/: CMakeLists.txt  Kconfig  Makefile  mcu_project_config.cmake
component/tflite_micro/: CMakeLists.txt  Kconfig  README.md  cmsis-nn.cmake  versions.txt
component/wifi/: CMakeLists.txt  Kconfig.wifi  wifi_include.cmake  wifilib.cmake
tools/ameba/: pyproject.toml
(+10106 files in other folders)
